add greetings react redux example

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>ginxwar's pages</title>
+  </head>
+  <body>
+    <a href="greetings-react-redux">Greetings App example using React+Redux</a>
+  </body>
+</html>
