--- a/greetings-react-redux/index.html
+++ b/greetings-react-redux/index.html
@@ -5,6 +5,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script src="src/bundle.js"></script></body>
-  <!-- <script src="bundle.js" /> -->
+  <script src="bundle.js"></script></body>  
 </html>
